<resources>
    <string name="app_name">Inventúra</string>
    <string name="activity_zoznam_budov">Zoznam Budov</string>
    <string name="activity_zoznam_poschodie">Zoznam Poschodi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_hint">Hladaj polozku</string>
    <string name="imageViewDescription">imageViewDescription</string>
    <string name="search_title">Hladaj</string>
    <string name="action_settings">Settings</string>
    <string name="zoznam_budov">Zoznam budov</string>
    <string name="inventory">Inventúra</string>
    <string name="zoznam_poschodi">Zoznam poschodí</string>
    <string name="zoznam_miestnosti">Zoznam miestností</string>
    <string name="inventar_vmiestnosti">Inventár v miestnosti</string>
    <string name="last_change">Posledná zmena</string>
    <string name="description_inventory_type">Typ inventára</string>
    <string name="description_notice">Poznámka</string>
    <string name="description_serialnr">Sériové číslo</string>
    <string name="description_inventoryName">Názov inventára</string>
    <string name="description_added">Zaradený / </string>
    <string name="description_discarded">Vyradený</string>
    <string name="description_responsible">Zodpovedný</string>
    <string name="price">Cena</string>
    <string name="activity_InventarDetail">Detail inventára</string>
    <string name="activity_settings">Nastavenie</string>
    <string name="ScanOrType">Naskenujte alebo zadajte kód inventára</string>
    <string name="info">Info</string>
    <string name="scann_barcode_first">Najprv nasnimajte barcode</string>
    <string name="barcode_doesnt_exist">Neexistujúci kód, inventár nie je evidovaný</string>
    <string name="Price">Cena : </string>


    <!--Chart-->
    <string name="chart_processed">Spracovane</string>
    <string name="chart_opened">Spolu</string>
    <string name="chart_items">Polozky</string>
    <string name="settings">Nastavenie</string>
    <string name="setting">Nastavenie hodnôt</string>
    <string name="preference_description">Inventúra majetku</string>
    <string name="daysOfInventory">Počet dní inventúry</string>
    <string name="barcode_doesnt_read_properly">Barcode sa nenacital spravne</string>
    <string name="komunikacia">Komunikácia</string>
    <string name="meno_musi_byt_vyplnene">Meno musi byt vyplnene</string>
    <string name="start_btn_label">Štart</string>
    <string name="barcode">barcode</string>
    <string name="start">Start</string>

    <string name="stop">Stop</string>
    <string name="status">Status :</string>
    <string name="scannerIsWaitingForTrigger">Scanner is waiting for trigger press...</string>
    <string name="AnErrorISOccured">An error has occurred.</string>
    <string name="isDisabled">is disabled.</string>
    <string name="scanning">Scanning...</string>
    <string name="scannerIsNotEnabled">Status: Scanner is not enabled</string>
    <string name="FailedToGetScannerDevice">Failed to get the specified scanner device! Please close and restart the application.</string>
    <string name="FailedToInitializeScannerDevice">Failed to initialize the scanner device.</string>
    <string name="isEnabledAndIdle">is enabled and idle...</string>
    <string name="EMDKclosedUnexpectedlz">EMDK closed unexpectedly! Please close and restart the application.</string>
    <string name="EMDK_OpenSuccess">EMDK open success!</string>

    <string name="importData">Import data</string>
    <string name="export_data">Export data</string>
    <string name="textBeforeImport_Export">Skontrolujte ci nie je prenos blokovany firewallom a stlacte START</string>
    <string name="NenaimportovalSaZiadnySuborPreverteFirewall">Nenaimportoval Sa Ziadny Subor Preverte Firewall</string>
    <string name="ImportDone">Import ukonceny za</string>
    <string name="loadDatabase">Stahujem databazu ...</string>
    <string name="NeexportovalSaZiadnySuborPreverteFirewall">NeexportovalSaZiadnySuborPreverteFirewall</string>
    <string name="NetworkisNotAvailable">Network is not Available</string>
    <string name="unknown_location">miestnosť nie je určená</string>
    <string name="database_file_didnt_find">Database file didn\'t find. Import Database</string>
    <string name="add_title">Pridaj inventar</string>
    <string name="zadajte_ean_inventara">Zadajte EAN inventára</string>


    <!-- -->

</resources>
