<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.innovativeproposals.inventorypokus2.Budova.ListBudova">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_parent_layout">

            <TextView
                android:id="@+id/barcodeET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="barcode"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_change"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barcodeET" />

            <TextView
                android:id="@+id/lastInventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="time"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textLayout_NazovInventara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lastInventory">

                <EditText
                    android:id="@+id/descriptionET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description_inventoryName"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/lbl_InventoryType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/description_inventory_type"
                app:layout_constraintTop_toBottomOf="@id/textLayout_NazovInventara" />

            <RelativeLayout
                android:id="@+id/layout_InventoryType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:padding="4dp"
                app:layout_constraintTop_toBottomOf="@id/lbl_InventoryType">

                <Spinner
                    android:id="@+id/spinner_InventoryType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_InventoryType" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textLayout_Notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/price">

                <EditText
                    android:id="@+id/notice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description_notice"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textLayout_SerialNr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textLayout_Notice">

                <EditText
                    android:id="@+id/txt_SerialNr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description_serialnr"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_added_discarded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLayout_SerialNr">

                <!--Added-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_Added"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/description_added" />

                    <TextView
                        android:id="@+id/txt_Added"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="11.11.2017" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_Discarded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_discarded" />

                    <TextView
                        android:id="@+id/txt_Discarded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="11.11.2017" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/lbl_Responsible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_responsible"
                app:layout_constraintTop_toBottomOf="@+id/layout_added_discarded" />

            <Button
                android:id="@+id/responsible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_responsible"
                app:layout_constraintTop_toBottomOf="@id/lbl_Responsible" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintTop_toBottomOf="@+id/responsible" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>